[gd_scene load_steps=4 format=2]

[ext_resource path="res://Bumper_Ships/X-Thing/x-thing.png" type="Texture" id=1]
[ext_resource path="res://Bumper_Ships/X-Thing/x-thing.gd" type="Script" id=2]
[ext_resource path="res://Bumper_Ships/X-Thing/wing.gd" type="Script" id=3]

[node name="x-thing" type="KinematicBody2D"]
collision_layer = 2
collision_mask = 2
script = ExtResource( 2 )

[node name="x-thing" type="Sprite" parent="."]
rotation = 1.5708
texture = ExtResource( 1 )

[node name="laser_1" type="Node2D" parent="."]
position = Vector2( -52, -52 )
rotation = -2.35619
script = ExtResource( 3 )

[node name="laser_2" type="Node2D" parent="."]
position = Vector2( 52, -52 )
rotation = -0.785398
script = ExtResource( 3 )

[node name="laser_3" type="Node2D" parent="."]
position = Vector2( 52, 52 )
rotation = 0.785398
script = ExtResource( 3 )

[node name="laser_4" type="Node2D" parent="."]
position = Vector2( -52, 52 )
rotation = 2.35619
script = ExtResource( 3 )

[node name="Timer" type="Timer" parent="."]
wait_time = 2.0
autostart = true

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]
rotation = 1.5708
polygon = PoolVector2Array( 50, -34.3, 48.7, -33.7, 44.7, -36.9, 14, -6.2, 14, 5.1, 44.6, 37.6, 48.5, 33.6, 50, 34.3, 50, 50, 34.3, 50, 33.7, 48.7, 36.8, 44.8, 7.3, 22, 5.9, 22, -4.2, 21.2, -36.8, 43.8, -33.7, 49, -34.2, 50, -50, 50, -50, 34.3, -48.7, 33.7, -44.7, 36.9, -14, 6.2, -14, -5.1, -44.6, -37.6, -48.5, -33.6, -50, -34.3, -50, -50, -34, -50, -34, -47.4, -35.7, -44.6, -7.3, -22, -5.9, -22, 4.2, -21.2, 36.8, -43.8, 33.7, -49, 34.3, -50, 50, -50 )

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
